--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,15 +5,22 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: platane/snk@v3
+      - name: Generate snake
+        uses: platane/snk@v3
         with:
           github_user_name: FlyingVoodoo
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#84a0c6,#4172a9,#3a5d91&color_snake_dots=orange
+          outputs: dist/github-snake.svg
+      - name: Commit and Push
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add dist/github-snake.svg
+          git commit -m "Generate GitHub snake"
+          git push
