--- a/.github/workflows/snake-run.yml
+++ b/.github/workflows/snake-run.yml
@@ -1,4 +1,5 @@
-name: "github-snake"
+name: Generate GitHub-Profile-Snake
+
 on:
   schedule:
     - cron: "0 0 * * *"
@@ -9,18 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: Generate snake
+        uses: Platane/snk@v3
         with:
           github_user_name: FlyingVoodoo
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/snake.gif
-
-      - uses: crazy-max/ghaction-github-pages@v2
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          outputs: dist/github-snake.svg
